# caps-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: all_caps.rs  clear_except_chown.rs  clear_permitted.rs  legacy.rs  manipulate_sys_nice.rs  parse.rs
src/: ambient.rs  base.rs  bounding.rs  capability.rs  caps.rs  errors.rs  errors.rs.bk  lib.rs  nr.rs  runtime.rs  securebits.rs
tests/: ambient.rs  bounding.rs  effective.rs  runtime.rs
