[package]
name = "caps"
version = "0.4.0-alpha.1"
edition = "2018"
authors = ["Luca Bruno <lucab@lucabruno.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/caps-rs"
documentation = "https://docs.rs/caps"
description = "A pure-Rust library to work with Linux capabilities"
keywords = ["Linux", "capabilities", "POSIX", "getcap", "setcap"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
errno = "^0.2"
thiserror = "^1.0"
libc = "^0.2"

[package.metadata.release]
sign-commit = true
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: caps release {{version}}"
post-release-commit-message = "cargo: development version bump"
tag-message = "caps {{version}}"
