[package]
name = "caps"
version = "0.5.3-alpha.0"
edition = "2018"
authors = ["Luca Bruno <lucab@lucabruno.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/caps-rs"
documentation = "https://docs.rs/caps"
description = "A pure-Rust library to work with Linux capabilities"
keywords = ["Linux", "capabilities", "POSIX", "getcap", "setcap"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
errno = "^0.2"
libc = "^0.2"
thiserror = "^1.0"

[package.metadata.release]
disable-publish = true
disable-push = true
post-release-commit-message = "cargo: development version bump"
pre-release-commit-message = "cargo: caps release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "caps {{version}}"
